# zenkinetic

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
contracts/: ZenKineticGate.sol
docs/: grant-application.md
src/: gate.rs  lib.rs  profile.rs  staking.rs
