[package]
name = "zenkinetic-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for ZenKinetic — score transaction privacy and gate fees on Horizen"

[[bin]]
name = "zenkinetic"
path = "src/main.rs"

[dependencies]
zenkinetic = { path = ".." }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
